--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
+
+#Sprigdoc OpenAPI 3.1 & Swagger 3
+spring-doc.swagger-ui.path=/docs-park.html
+spring-doc.api-docs.path=/docs-park
+spring-doc.packagesToScan=org.example.web.controller
