--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
             <version>2.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
